--- a/web_static/styles/2-footer.css
+++ b/web_static/styles/2-footer.css
@@ -1,11 +1,12 @@
 footer {
-  background-color: #00FF00;
-  height: 60px;
-  width: 100%;
-  position: absolute;
-  bottom: 0;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: #00FF00;
+    height: 60px;
 }
 
 footer p {
-  text-align: center;
+    text-align: center;
+    margin: 20px;
 }
