--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -1,27 +1,26 @@
 .filters {
-  color: #FFF;
-  height: 70px;
-  width: 100%;
-  border: 1px solid #DDDDDD;
-  border-radius: 4px;
-  display: flex;
-  flex-direction: row;
-  box-sizing: border-box;
+    background-color: white;
+    height: 70px;
+    width: 100%;
+    border: 1px solid #DDDDDD;
+    border-radius: 4px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
 }
 
-button {
-  font-size: 18px;
-  background-color: #FF5A5F;
-  color: #FFF;
-  height: 48px;
-  width: 20%;
-  border: none;
-  border-radius: 4px;
-  margin: auto 30px auto auto;
-  align-self: center;
+section.filters button{
+    font-size: 18px;
+    color: white;
+    background-color: #FF5A5F;
+    height: 48px;
+    border: 0px;
+    border-radius: 4px;
+    width: 20%;
+    margin-right: 30px;
+    opacity: 1;
 }
 
-button:hover {
-  opacity: .9;
-  cursor: pointer;
+section.filters button:hover {
+    opacity: 0.9;
 }
