--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -1,50 +1,48 @@
 .filters {
-  height: 70px;
-  width: 100%;
-  border: 1px solid #DDDDDD;
-  border-radius: 4px;
-  display: flex;
-  align-items: center;
-  box-sizing: border-box;
+    background-color: white;
+    height: 70px;
+    width: 100%;
+    border: 1px solid #DDDDDD;
+    border-radius: 4px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
 }
 
-button {
-  font-size: 18px;
-  background-color: #FF5A5F;
-  color: #FFF;
-  height: 48px;
-  width: 20%;
-  border: none;
-  border-radius: 4px;
-  margin: auto 30px auto auto;
-  align-self: center;
+section.filters button{
+    font-size: 18px;
+    color: white;
+    background-color: #FF5A5F;
+    height: 48px;
+    border: 0px;
+    border-radius: 4px;
+    width: 20%;
+    margin-left: auto;
+    margin-right: 30px;
+    opacity: 1;
 }
 
-button:hover {
-  opacity: .9;
-  cursor: pointer;
+section.filters button:hover {
+    opacity: 0.9;
 }
 
-.locations,
-.amenities {
-  height: 100%;
-  width: 25%;
-  display: inline-block;
+.locations, .amenities {
+    height: 100%;
+    width: 25%;
+    padding-left: 50px;
 }
 
 .locations {
-  border-right: 1px solid #DDDDDD;
+    border-right: 1px solid #DDDDDD;
 }
 
-.locations h3,
-.amenities h3{
-  font-weight: 600;
-  margin: 1em 0 auto 20px;
+.locations h3, .amenities h3 {
+    font-weight: 600;
+    margin: 12px 0 5px 0;
 }
 
-.locations h4,
-.amenities h4 {
-  font-weight: 400;
-  font-size: 14px;
-  margin: auto 0 auto 20px;
+.locations h4, .amenities h4 {
+    font-weight: 400;
+    font-size: 14px;
+    margin: 0 0 0 0;
 }
