--- a/web_static/styles/7-places.css
+++ b/web_static/styles/7-places.css
@@ -1,26 +1,29 @@
 .places {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-.places h1 {
-  width: 100%;
-  font-size: 30px;
-  padding-left: 20px;
-  margin: 10px auto auto;
+    width: 100%;
+    border: 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
-.places article {
-  width: 390px;
-  padding: 20px;
-  margin: 20px;
-  border-radius: 4px;
-  border: 1px solid #FF5A5F;
+.places > h1 {
+    font-size: 30px;
+    padding-left: 20px;
+    padding-top: 20px;
+    margin-bottom: 0px;
+    flex: 0 1 100%;
+}
+.places > article {
+    width: 390px;
+    padding: 20px 20px 20px 20px;
+    margin: 20px 20px 20px 20px;
+    border: 1px solid #FF5A5F;
+    border-radius: 4px;
+    display: flex;
+    justify-content: center;
 }
 
-.places h2 {
-  font-size: 30px;
-  margin: 0;
-  padding: 0;
-  text-align: center;
+.places > article > h2 {
+    font-size: 30px;
 }
