--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -1,105 +1,107 @@
 .places {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+    width: 100%;
+    border: 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
-.places h1 {
-  width: 100%;
-  font-size: 30px;
-  padding-left: 20px;
-  margin: 10px auto auto;
+.places > h1 {
+    font-size: 30px;
+    padding-left: 20px;
+    padding-top: 20px;
+    margin-bottom: 0px;
+    flex: 0 1 100%;
+}
+.places > article {
+    width: 390px;
+    padding: 20px 20px 20px 20px;
+    margin: 20px 20px 20px 20px;
+    border: 1px solid #FF5A5F;
+    border-radius: 4px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    position: relative;
 }
 
-.places article {
-  width: 390px;
-  padding: 20px;
-  margin: 20px;
-  border-radius: 4px;
-  border: 1px solid #FF5A5F;
-}
-
-.places h2 {
-  font-size: 30px;
-  margin: 0;
-  padding: 0;
-  text-align: center;
-  flex-grow: 1;
-}
-
-article {
-  z-index: -1;
-  display: flex;
-  flex-wrap: wrap;
-}
-
-/* article information */
-
-
-/* circle with price */
-.article_places_header {
-  width: 100%;
-  display: flex;
-
+.places > article > h2 {
+    font-size: 30px;
+    margin: 0 0 0 0;
+    align-self: center;
 }
 
 .price_by_night {
-    min-width: 60px;
-    height: 60px;
     color: #FF5A5F;
     border: 4px solid #FF5A5F;
-    border-radius: 50%;
+    min-width: 60px;
+    height: 60px;
     font-size: 30px;
+    border-radius: 50%;
     display: flex;
-    align-items: center;
     justify-content: center;
-    padding: 5px;
-    position: relative;
-    bottom: 5px;
+    align-items: center;
+    margin-left: auto;
+    position: absolute;
+    top: 10px;
+    right: 20px;
 }
-
-
-/* information box with icons */
-
+.price_by_night > p {
+    margin: 0 0 0 0;
+}
 
 .information {
-  width: 100%;
-  height: 80px;
-  border-top: 1px solid #DDDDDD;
-  border-bottom: 1px solid #DDDDDD;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-}
-.user {
-  padding: 20px 0 5px;
-}
-.user b, p {
-  margin: 0;
-  padding: 0;
+    align-self: center;
+    height: 80px;
+    width: 100%;
+    border-top: 1px solid #DDDDDD;
+    border-bottom: 1px solid #DDDDDD;
+    margin-top: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-/* icons   */
-
-.max_guest {
-  background-image: url(../images/icon_group.png);
+.max_guest, .number_rooms, .number_bathrooms {
+    width: 100px;
+    text-align: center;
 }
 
-.number_rooms {
-  background-image: url(../images/icon_bed.png);
+.max_guest > p, .number_rooms > p, .number_bathrooms > p{
+    margin-top: auto;
+    margin-bottom: auto;
 }
 
-.number_bathrooms {
-  background-image: url(../images/icon_bath.png)
+.guest_image {
+    margin-left: auto;
+    margin-right: auto;
+    height: 50px;
+    width: 50px;
+    background: url("../images/icon_group.png") no-repeat center;
 }
 
-.max_guest,
-.number_rooms,
-.number_bathrooms {
-  width: 100px;
-  background-repeat: no-repeat;
-  display:flex;
-  flex-direction: column-reverse;
-  background-position-x: center;
-  text-align:center;
+.bed_image {
+    margin-left: auto;
+    margin-right: auto;
+    height: 50px;
+    width: 50px;
+    background: url("../images/icon_bed.png") no-repeat center;
+}
+
+.bath_image {
+    margin-left: auto;
+    margin-right: auto;
+    height: 50px;
+    width: 50px;
+    background: url("../images/icon_bath.png") no-repeat center;
+}
+
+.user > p {
+    margin-top: 20px;
+    margin-bottom: 0px;
+}
+.description > p {
+    margin-top: 7px;
+    margin-bottom: 0px;
 }
